@@ -4,7 +4,7 @@
   <groupId>com.aliyun</groupId>
   <artifactId>aliyun-java-sdk-acs</artifactId>
   <packaging>jar</packaging>
-  <version>sdfasd-SNAPSHOT</version>
+  <version>adfdsf-SNAPSHOT</version>
   <name>aliyun-java-sdk-acs</name>
   <url>http://www.aliyun.com</url>
   <description>Aliyun Open API SDK for Java
